chore: temp test fixes, not done yet