@@ -1,6 +1,7 @@
 package base.storage.snapshots;
 
 import base.domain.bid.BidType;
+import base.domain.card.Suit;
 import base.domain.snapshots.RoundSnapshot;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
@@ -35,7 +36,8 @@ class RoundSnapshotTest {
                         13,
                         List.of(),
                         1,
-                        getValidDeltas()
+                        getValidDeltas(),
+                        Suit.HEARTS
                 );
             });
         }
@@ -52,7 +54,8 @@ class RoundSnapshotTest {
                         -1,
                         List.of(2),
                         2,
-                        Arrays.asList(-30, 15, 15, 0)
+                        Arrays.asList(-30, 15, 15, 0),
+                        Suit.HEARTS
                 );
             });
         }
@@ -61,14 +64,15 @@ class RoundSnapshotTest {
         @DisplayName("Null miserieWinnerIndices gracefully defaults to empty list")
         void testNullMiserieWinnersDefaultsToEmpty() {
             RoundSnapshot snapshot = new RoundSnapshot(
-                        List.of("1", "2", "3", "4"),
+                    List.of("1", "2", "3", "4"),
                     BidType.SOLO,
                     0,
                     List.of(0),
                     5,
                     null, // Passing null here
                     1,
-                    getValidDeltas()
+                    getValidDeltas(),
+                    Suit.HEARTS
             );
 
             assertNotNull(snapshot.miserieWinnerIndices());
@@ -85,7 +89,7 @@ class RoundSnapshotTest {
         void testNullBidType() {
             assertThrows(IllegalArgumentException.class, () ->
                     new RoundSnapshot(
-                        List.of("1", "2", "3", "4"),null, 0, List.of(0), 5, List.of(), 1, getValidDeltas())
+                            List.of("1", "2", "3", "4"),null, 0, List.of(0), 5, List.of(), 1, getValidDeltas(), Suit.HEARTS)
             );
         }
 
@@ -94,11 +98,11 @@ class RoundSnapshotTest {
         void testInvalidBidderIndex() {
             assertThrows(IllegalArgumentException.class, () ->
                     new RoundSnapshot(
-                        List.of("1", "2", "3", "4"),BidType.SOLO, -1, List.of(0), 5, List.of(), 1, getValidDeltas())
+                            List.of("1", "2", "3", "4"),BidType.SOLO, -1, List.of(0), 5, List.of(), 1, getValidDeltas(), Suit.HEARTS)
             );
             assertThrows(IllegalArgumentException.class, () ->
                     new RoundSnapshot(
-                        List.of("1", "2", "3", "4"),BidType.SOLO, 4, List.of(0), 5, List.of(), 1, getValidDeltas())
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 4, List.of(0), 5, List.of(), 1, getValidDeltas(), Suit.HEARTS)
             );
         }
 
@@ -107,11 +111,11 @@ class RoundSnapshotTest {
         void testInvalidMultiplier() {
             assertThrows(IllegalArgumentException.class, () ->
                     new RoundSnapshot(
-                        List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), 5, List.of(), 0, getValidDeltas())
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), 5, List.of(), 0, getValidDeltas(), Suit.HEARTS)
             );
             assertThrows(IllegalArgumentException.class, () ->
                     new RoundSnapshot(
-                        List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), 5, List.of(), -2, getValidDeltas())
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), 5, List.of(), -2, getValidDeltas(), Suit.HEARTS)
             );
         }
 
@@ -120,11 +124,11 @@ class RoundSnapshotTest {
         void testInvalidTricksWon() {
             assertThrows(IllegalArgumentException.class, () ->
                     new RoundSnapshot(
-                        List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), -2, List.of(), 1, getValidDeltas())
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), -2, List.of(), 1, getValidDeltas(), Suit.HEARTS)
             );
             assertThrows(IllegalArgumentException.class, () ->
                     new RoundSnapshot(
-                        List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), 14, List.of(), 1, getValidDeltas())
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), 14, List.of(), 1, getValidDeltas(), Suit.HEARTS)
             );
         }
     }
@@ -139,7 +143,7 @@ class RoundSnapshotTest {
             // Null list
             assertThrows(IllegalArgumentException.class, () ->
                     new RoundSnapshot(
-                        List.of("1", "2", "3", "4"),BidType.SOLO, 0, null, 5, List.of(), 1, getValidDeltas())
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, null, 5, List.of(), 1, getValidDeltas(), Suit.HEARTS)
             );
 
             // Contains null element
@@ -147,17 +151,17 @@ class RoundSnapshotTest {
             listWithNull.add(null);
             assertThrows(IllegalArgumentException.class, () ->
                     new RoundSnapshot(
-                        List.of("1", "2", "3", "4"),BidType.SOLO, 0, listWithNull, 5, List.of(), 1, getValidDeltas())
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, listWithNull, 5, List.of(), 1, getValidDeltas(), Suit.HEARTS)
             );
 
             // Contains out of bounds indices
             assertThrows(IllegalArgumentException.class, () ->
                     new RoundSnapshot(
-                        List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(-1), 5, List.of(), 1, getValidDeltas())
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(-1), 5, List.of(), 1, getValidDeltas(), Suit.HEARTS)
             );
             assertThrows(IllegalArgumentException.class, () ->
                     new RoundSnapshot(
-                        List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(4), 5, List.of(), 1, getValidDeltas())
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(4), 5, List.of(), 1, getValidDeltas(), Suit.HEARTS)
             );
         }
 
@@ -169,19 +173,19 @@ class RoundSnapshotTest {
             listWithNull.add(null);
             assertThrows(IllegalArgumentException.class, () ->
                     new RoundSnapshot(
-                        List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), 5, listWithNull, 1, getValidDeltas())
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), 5, listWithNull, 1, getValidDeltas(), Suit.HEARTS)
             );
 
             // Contains out of bounds index (too low)
             assertThrows(IllegalArgumentException.class, () ->
                     new RoundSnapshot(
-                        List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), 5, List.of(-1), 1, getValidDeltas())
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), 5, List.of(-1), 1, getValidDeltas(), Suit.HEARTS)
             );
 
             // Contains out of bounds index (too high) - THIS WAS THE MISSING BRANCH!
             assertThrows(IllegalArgumentException.class, () ->
                     new RoundSnapshot(
-                        List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0, 1, 2, 3), 5, List.of(4), 1, getValidDeltas())
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0, 1, 2, 3), 5, List.of(4), 1, getValidDeltas(), Suit.HEARTS)
             );
         }
 
@@ -190,7 +194,7 @@ class RoundSnapshotTest {
         void testMiserieWinnersMustBeParticipants() {
             assertThrows(IllegalArgumentException.class, () ->
                     new RoundSnapshot(
-                        List.of("1", "2", "3", "4"),BidType.MISERIE, 0, List.of(0, 1), -1, List.of(2), 1, getValidDeltas())
+                            List.of("1", "2", "3", "4"),BidType.MISERIE, 0, List.of(0, 1), -1, List.of(2), 1, getValidDeltas(), Suit.HEARTS)
             );
         }
     }
@@ -204,15 +208,15 @@ class RoundSnapshotTest {
         void testInvalidScoreDeltasSize() {
             assertThrows(IllegalArgumentException.class, () ->
                     new RoundSnapshot(
-                        List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), 5, List.of(), 1, null)
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), 5, List.of(), 1, null, Suit.HEARTS)
             );
             assertThrows(IllegalArgumentException.class, () ->
                     new RoundSnapshot(
-                        List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), 5, List.of(), 1, List.of(0, 0, 0)) // Size 3
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), 5, List.of(), 1, List.of(0, 0, 0), Suit.HEARTS) // Size 3
             );
             assertThrows(IllegalArgumentException.class, () ->
                     new RoundSnapshot(
-                        List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), 5, List.of(), 1, List.of(0, 0, 0, 0, 0)) // Size 5
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), 5, List.of(), 1, List.of(0, 0, 0, 0, 0), Suit.HEARTS) // Size 5
             );
         }
 
@@ -222,7 +226,7 @@ class RoundSnapshotTest {
             List<Integer> deltasWithNull = Arrays.asList(90, -30, null, -60);
             assertThrows(IllegalArgumentException.class, () ->
                     new RoundSnapshot(
-                        List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), 5, List.of(), 1, deltasWithNull)
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), 5, List.of(), 1, deltasWithNull, Suit.HEARTS)
             );
         }
 
@@ -232,7 +236,7 @@ class RoundSnapshotTest {
             List<Integer> invalidDeltas = Arrays.asList(90, -30, -30, -20); // Sums to +10
             assertThrows(IllegalArgumentException.class, () ->
                     new RoundSnapshot(
-                        List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), 5, List.of(), 1, invalidDeltas)
+                            List.of("1", "2", "3", "4"),BidType.SOLO, 0, List.of(0), 5, List.of(), 1, invalidDeltas, Suit.HEARTS)
             );
         }
     }
@@ -245,18 +249,19 @@ class RoundSnapshotTest {
         @DisplayName("Ensures internal lists are deep copied and immutable")
         void testListImmutability() {
             List<Integer> participants = new ArrayList<>(Arrays.asList(0, 1));
-            List<Integer> miserieWinners = new ArrayList<>(Arrays.asList(1));
+            List<Integer> miserieWinners = new ArrayList<>(List.of(1));
             List<Integer> deltas = new ArrayList<>(Arrays.asList(30, -10, -10, -10));
 
             RoundSnapshot snapshot = new RoundSnapshot(
-                        List.of("1", "2", "3", "4"),
+                    List.of("1", "2", "3", "4"),
                     BidType.MISERIE,
                     0,
                     participants,
                     -1,
                     miserieWinners,
                     1,
-                    deltas
+                    deltas,
+                    Suit.HEARTS
             );
 
             // Attempt to mutate original lists
@@ -267,7 +272,7 @@ class RoundSnapshotTest {
             // Verify the snapshot remained unchanged
             assertEquals(2, snapshot.participantIndices().size(), "Participant list should be isolated from external changes");
             assertEquals(1, snapshot.miserieWinnerIndices().size(), "Miserie winner list should be isolated from external changes");
-            assertEquals(30, snapshot.scoreDeltas().get(0), "Score deltas should be isolated from external changes");
+            assertEquals(30, snapshot.scoreDeltas().getFirst(), "Score deltas should be isolated from external changes");
 
             // Attempt to mutate the snapshot's lists directly
             assertThrows(UnsupportedOperationException.class, () -> snapshot.participantIndices().add(3));
